# RAG-CHATBOT-using-DJANGO-framework

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  WALKTHROUGH.md  build.sh  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt  runtime.txt
.agent/workflows/: deploy.md
chatbot/: admin.py  forms.py  models.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py
chatbot/services/: document_processor.py  embeddings.py  llm_service.py  vector_store.py
chatbot/templates/chatbot/: chat.html  login.html  register.html  upload.html
chroma_db/1/: chroma.sqlite3
config/: settings.py  urls.py
