[project]
name = "ragassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.0",
    "chromadb>=1.3.6",
    "dj-database-url>=3.0.1",
    "django>=5.2.9",
    "djangorestframework>=3.16.1",
    "groq>=0.37.1",
    "gunicorn>=23.0.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.4.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sentence-transformers>=5.1.2",
    "whitenoise>=6.11.0",
]
